Set Up Code For Animations

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         
-        <img alt="loading" src="./loading.png" class="spinner" draggable="false">
+        <img alt="loading" src="./loading.png" class="spin-fast" draggable="false">
         <p>Around the World...Around the World...</p>
         
     </body>
